--- a/TINY_Compiler_Scanner/JASON_Compiler/JASON_Compiler.csproj
+++ b/TINY_Compiler_Scanner/JASON_Compiler/JASON_Compiler.csproj
@@ -61,14 +61,24 @@
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
     <Compile Include="JASON_Compiler.cs" />
+    <Compile Include="Parser Form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Parser Form.Designer.cs">
+      <DependentUpon>Parser Form.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scanner.cs" />
+    <Compile Include="SyntaxAnalyser.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Parser Form.resx">
+      <DependentUpon>Parser Form.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
