--- a/TINY_Compiler_Scanner/JASON_Compiler/JASON_Compiler.csproj
+++ b/TINY_Compiler_Scanner/JASON_Compiler/JASON_Compiler.csproj
@@ -70,6 +70,13 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scanner.cs" />
+    <Compile Include="SemanticAnalyser.cs" />
+    <Compile Include="SemanticAnalyserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SemanticAnalyserForm.Designer.cs">
+      <DependentUpon>SemanticAnalyserForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="SyntaxAnalyser.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -90,6 +97,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SemanticAnalyserForm.resx">
+      <DependentUpon>SemanticAnalyserForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
