--- a/TINY_Compiler_Scanner/JASON_Compiler/JASON_Compiler.csproj
+++ b/TINY_Compiler_Scanner/JASON_Compiler/JASON_Compiler.csproj
@@ -80,6 +80,7 @@
     <Compile Include="SyntaxAnalyser.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
