--- a/TINY_Compiler_Scanner/JASON_Compiler/JASON_Compiler.csproj
+++ b/TINY_Compiler_Scanner/JASON_Compiler/JASON_Compiler.csproj
@@ -84,9 +84,11 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Parser Form.resx">
       <DependentUpon>Parser Form.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -100,6 +102,7 @@
     </Compile>
     <EmbeddedResource Include="SemanticAnalyserForm.resx">
       <DependentUpon>SemanticAnalyserForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
